cmake_minimum_required(VERSION 3.23)
project(AOC22)

set(CMAKE_CXX_STANDARD 23)

add_executable(AOC22 src/main.cpp)
add_executable(dayone src/dayone.cpp)
add_executable(daytwo src/daytwo.cpp)
add_executable(daythree src/daythree.cpp)
add_executable(dayfour src/dayfour.cpp)
add_executable(dayfive src/dayfive.cpp)
